deploy/openshift/products/dev/canvas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bamoe-canvas
  labels:
    app.kubernetes.io/name: bamoe-canvas
    app.kubernetes.io/component: authoring
    app.kubernetes.io/part-of: bamoe-dev-environment
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: bamoe-canvas
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bamoe-canvas
        app.kubernetes.io/component: authoring
        app.kubernetes.io/part-of: bamoe-dev-environment
      annotations:
        productName: "IBM Process Automation Manager Open Edition"
        productID: "72984f114b54496a8a44be139154a988"
        productVersion: "9.5.0"
        productMetric: "VIRTUAL_PROCESSOR_CORE"
        productChargedContainers: "All"
        includeSWCUpload: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: canvas
          image: quay.io/bamoe/canvas:9.5.0-ibm-0005
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 2
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: bamoe-canvas
  labels:
    app.kubernetes.io/name: bamoe-canvas
    app.kubernetes.io/part-of: bamoe-dev-environment
spec:
  selector:
    app.kubernetes.io/name: bamoe-canvas
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bamoe-canvas
  labels:
    app.kubernetes.io/name: bamoe-canvas
    app.kubernetes.io/part-of: bamoe-dev-environment
spec:
  host: bamoe-canvas.apps.itz-ygi22x.infra01-lb.wdc07.techzone.ibm.com
  to:
    kind: Service
    name: bamoe-canvas
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
